--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <div class="row" id="viewblock">
         <div class="img_div"> 
-            <img class="img-responsive" src="images/pizza.png">
+            <img class="img-responsive" src="images/imagespizza.png">
         </div>
         <div class="menu_div">
             <button id="menu_list" onclick="getmenu()">Show Menu</button>
@@ -31,9 +31,8 @@
     <div class="newRow" id="addTopings">
         <div class="block1">
             <input id="add_item" placeholder="Type here to add toppings?"> 
-			<button class="btn btn-success">       </button>
-            <button  class="btn btn-succes" onclick="add_top()"> Add suggestion</button>
-            <button id="add_toppings" onclick="add_item()">Show Pizza</button>
+            <button  class="btn btn-succes"onclick="add_top()">Add suggestion</button>
+            <button id="pizzas" onclick="add_item()">Show Pizza</button>
         </div>
 		
         <div class="block2">
@@ -44,7 +43,7 @@
     </div>
 
     <div>
-        <img class="img-responsive" src="images/topping.png">
+        <img class="img-responsive" src="images/toppings.jpeg">
     </div>
 
 
